# WX-Editor

./: .gitignore  CMakeLists.txt  Constants.hpp  EditorComponent.cpp  EditorComponent.hpp  EventBindingComponent.cpp  EventBindingComponent.hpp  FileManagerComponent.cpp  FileManagerComponent.hpp  FileOperations.cpp  FileOperations.hpp  FindDialog.cpp  FindDialog.hpp  LayoutComponent.cpp  LayoutComponent.hpp  MainEditorFrame.cpp  MainEditorFrame.hpp  README.md  StatusBarComponent.cpp  StatusBarComponent.hpp  ToolbarComponent.cpp  ToolbarComponent.hpp  app.cpp  app.hpp  constants.hpp  log.txt  main_frame.cpp  shell.nix  window.cpp
assets/icons/: logo_hx_osx_ico.icns
